--- a/pages/login.html
+++ b/pages/login.html
@@ -11,12 +11,12 @@
 <body>
     <form>
         <h1>Login</h1>
-        <input type="text" placeholder="Digite seu usuário ou email">
-        <input type="password" placeholder="Digite sua senha">
-        <button type="submit">Entrar</button>
-        <p>Não possui uma conta?
-            <a href="cad-pessoa.html">Cadastre-se</a>
-        </p>
+        <label>Usuário ou email</label>
+        <input type="text" required>
+        <label id="passwordlabel">Senha</label>
+        <input type="password" required>
+        <button type="submit">login</button>
+        <a href="#">Esqueceu a senha?</a>
     </form>
 </body>
 
