Começo do projeto de busca

--- a/pages/busca.html
+++ b/pages/busca.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Busca</title>
+    <link rel="stylesheet" href="../assets/css/busca.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
+
 <body>
-    
+    <div class="align">
+        <input type="text">
+        <button type="submit">
+            <span class="material-symbols-outlined">
+                search
+            </span>
+        </button>
+    </div>
 </body>
+
 </html>
