Finalização do projeto
Parte final do projeto: Input de busca com botao de pesquisar com sombra.

Quando o usuário passa o mouse em cima do input de busca, o input sofre um aumento em seu tamanho e quando o usuário passa o mouse em cima do botão de pesquisar, as cores do degradê do fundo se invertem

--- a/pages/busca.html
+++ b/pages/busca.html
@@ -12,9 +12,9 @@
 
 <body>
     <div class="align">
-        <input type="text">
+        <input placeholder="Search..." type="text">
         <button type="submit">
-            <span class="material-symbols-outlined">
+            <span class="icon material-symbols-outlined">
                 search
             </span>
         </button>
